--- a/dex/style.css
+++ b/dex/style.css
@@ -93,9 +93,9 @@ body {
     text-align: left;
     list-style: none;
     columns: 2;
-    column-gap: 15px;
+    column-gap: 20px;
     margin: 10px 0;
-    line-height: 20px;
+    line-height: 30px;
 }
 
 .back-card li:nth-child(-n+3) { text-align: end; }
@@ -111,23 +111,23 @@ body {
 .image {
     background-color: rgba(255, 255, 255, 0.6);
     border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    max-width: 180px;
+    width: 150px;
+    height: 150px;
     white-space: nowrap;
-    margin: 0 auto;
+    margin: 10px auto 0;
 }
 
 .middle {
     display: inline-block;
     vertical-align: middle;
     height: 100%;
+    margin-left: -15px;
 }
 
 .image img{
     vertical-align: middle;
-    max-width: 120px;
-    max-height: 120px;
+    max-width: 150px;
+    max-height: 150px;
 }
 
 .info {
@@ -143,6 +143,10 @@ body {
     font-weight: bolder;
     text-transform: capitalize;
 }
+
+.front-card i { height: 1rem; width: 1rem; }
+.front-card .number { text-transform: uppercase; }
+.back-card .number { text-transform: capitalize; }
 
 .name {
     margin: 13px 0 7px;
