--- a/dex/style.css
+++ b/dex/style.css
@@ -36,6 +36,7 @@ body {
 .options {
     float: right;
     display: flex;
+    flex-wrap: wrap;
     column-gap: 3rem;
     margin: 0 20px;
     line-height: 50px;
