--- a/dex/style.css
+++ b/dex/style.css
@@ -15,7 +15,7 @@ body {
 
 .title {
     letter-spacing: 5px;
-    margin: 0 20px;
+    margin: 0 2rem;
     font-size: 44px;
     float: left;
 }
@@ -23,14 +23,15 @@ body {
 .header {
     display: inline-block;
     width: 100%;
-    padding: 15px;
+    padding: 1rem;
 }
 
 .header a { text-decoration: none; }
 .header small { font-size: small; }
 
 .radio {
-    display: inline-block;
+    display: inline-flex;
+    column-gap: 10px;
 }
 
 .options {
@@ -38,26 +39,27 @@ body {
     display: flex;
     flex-wrap: wrap;
     column-gap: 3rem;
-    margin: 0 20px;
-    line-height: 50px;
+    line-height: 3rem;
+    margin: 0 2rem;
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    padding: 0 20px;
+    justify-content: space-around;
+    padding: 0 2rem;
     /* max-width: 1600px; */
 }
 
 .flip-card {
-    min-height: 260px;
-    border-radius: 10px;
-    margin: 10px;
-    padding: 20px;
+    flex-basis: auto;
     text-align: center;
-    flex-basis: 260px;
-    flex-grow: 1;
+    min-height: 260px;
+    min-width: 260px;
+    border-radius: 1rem;
+    padding: 1rem;
+    margin: 0.5rem;
     flex-shrink: 1;
 }
 
@@ -90,49 +92,53 @@ body {
     transform: rotateY(180deg);
 }
 
+.back-card h3 { margin-top: 15px; }
+
 .back-card ul {
     text-align: left;
     list-style: none;
     columns: 2;
-    column-gap: 20px;
-    margin: 10px 0;
-    line-height: 30px;
+    column-gap: 1rem;
+    line-height: 2rem;
+    margin: 0.5rem -0.5rem 0.5rem 0;
+    
 }
 
 .back-card li:nth-child(-n+3) { text-align: end; }
-.back-card li small:nth-child(-n+3) { margin-right: 5px; }
+.back-card li small:nth-child(-n+3) { margin-right: 0.2rem; }
 .back-card .total { margin-left: 30px; }
 
 .back-card small {
     font-size: 0.6rem;
     text-transform: uppercase;
-    margin-left: 5px;
+    margin-left: 0.2rem;
 }
 
 .image {
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 50%;
     width: 150px;
     height: 150px;
     white-space: nowrap;
-    margin: 10px auto 0;
+    margin: 1rem auto 0;
 }
 
 .middle {
     display: inline-block;
     vertical-align: middle;
+    margin-right: auto;
+    margin-left: -1rem;
     height: 100%;
-    margin-left: -15px;
 }
 
 .image img{
     vertical-align: middle;
-    max-width: 150px;
-    max-height: 150px;
+    max-width: 90%;
+    max-height: 90%;
 }
 
 .info {
-    margin-top: 10px;
+    margin-top: -0.5rem;
 }
 
 .number {
